--- a/assets/scss/components/main-page/top-bar.scss
+++ b/assets/scss/components/main-page/top-bar.scss
@@ -1,5 +1,11 @@
 @import '@/assets/scss/util.scss';
-
+@font-face {
+  font-family: 'GmarketSans';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 #TopBarM {
   position: sticky;
   top: 0;
@@ -121,6 +127,109 @@
     strong {
       color: #3e82f1;
       font-weight: 600;
+    }
+  }
+  .matching-banner {
+    display: flex;
+    height: 56px;
+    background-color: #fff;
+    div:first-child {
+      line-height: 56px;
+      padding-left: 20px;
+      color: #414141;
+      font-family: GmarketSans;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      letter-spacing: -0.075px;
+      flex-grow: 1;
+    }
+    div:nth-child(2) {
+      width: max-content;
+      line-height: 56px;
+      padding-right: 20px;
+      color: #6254f0;
+      font-family: Pretendard;
+      font-size: 15px;
+      font-style: normal;
+      font-weight: 500;
+    }
+  }
+  .complete-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    .content-wrp {
+      width: 280px;
+      height: 280px;
+      border-radius: 12px;
+      background: #fff;
+      .close {
+        padding-top: 20px;
+        padding-right: 20px;
+        text-align: right;
+        img {
+          width: 24px;
+        }
+      }
+      .img {
+        text-align: center;
+        padding-top: 8px;
+        img {
+          width: 77px;
+        }
+      }
+      .top {
+        display: flex;
+        width: 280px;
+        height: 76px;
+        padding: 17px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+        div:first-child {
+          color: #061935;
+          font-family: Pretendard;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 24px; /* 133.333% */
+        }
+        div:nth-child(2) {
+          color: #5c6c82;
+          font-family: Pretendard;
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          text-align: center;
+        }
+      }
+      .btn {
+        height: 48px;
+        line-height: 48px;
+        margin: 0px 16px 16px 16px;
+        font-family: Pretendard;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
+        border-radius: 8px;
+        border: 1px solid #6254f0;
+        color: #6254f0;
+        background: #f9faff;
+      }
     }
   }
   .bottom {
