--- a/assets/scss/blind-date/fee.scss
+++ b/assets/scss/blind-date/fee.scss
@@ -69,8 +69,11 @@
 
   .middle {
     padding: 10px 20px;
+    width: 90vw;
 
     .whynot {
+      width: 100%;
+
       .whynot-number-title {
         font-family: Pretendard;
         font-size: 15px;
@@ -87,7 +90,6 @@
         justify-content: space-between;
         justify-self: center;
 
-        width: 90%;
         padding: 15px;
         border-radius: 8px;
         border: 1px solid rgba(231, 231, 231, 1);
@@ -124,6 +126,7 @@
           width: 23px;
           height: 12px;
           font-size: 13px;
+          font-weight: 700;
           padding: 10px 17px 10px 16px;
           border-radius: 9999px;
           border: 1px;
@@ -151,7 +154,7 @@
       }
 
       .my-name-input {
-        width: 325px;
+        width: 95%;
         height: 44px;
         border-radius: 8px;
         border: 1px;
@@ -178,7 +181,7 @@
       }
 
       .student-id-input {
-        width: 325px;
+        width: 95%;
         height: 44px;
         border-radius: 8px;
         border: 1px;
@@ -205,7 +208,7 @@
       }
 
       .bank-number-input {
-        width: 325px;
+        width: 95%;
         height: 44px;
         border-radius: 8px;
         border: 1px;
@@ -217,7 +220,6 @@
     }
 
     .submit-btn {
-      width: 300px;
       padding: 12px;
       border-radius: 9999px;
       border: 1px solid rgba(62, 130, 241, 1);
@@ -246,6 +248,96 @@
         letter-spacing: 0em;
         text-align: left;
         color: rgba(100, 100, 100, 1);
+      }
+    }
+
+    .ask-popup {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 9999;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+
+      .content-wrp {
+        width: 320px;
+        height: 220px;
+        border-radius: 12px;
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
+        .top {
+          display: flex;
+          width: 320px;
+          height: 100%;
+          padding: 38px 0px 15px 0px;
+          flex-direction: column;
+          justify-content: space-between;
+          // align-items: center;
+          gap: 17px;
+          display: inline-flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 6px;
+          div:first-child {
+            color: rgba(6, 25, 53, 1);
+            font-family: Pretendard;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 24px;
+            letter-spacing: 0em;
+            text-align: center;
+          }
+          div:nth-child(2) {
+            color: rgba(92, 108, 130, 1);
+            font-family: Pretendard;
+            font-size: 15px;
+            font-weight: 400;
+            line-height: 18px;
+            letter-spacing: 0em;
+            text-align: center;
+          }
+          div:nth-child(3) {
+            color: rgba(48, 28, 255, 1);
+            font-family: Pretendard;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 20px;
+            letter-spacing: 0em;
+            text-align: left;
+            padding-top: 30px;
+          }
+        }
+        .btn {
+          border-radius: 8px;
+          border: 1px solid #d9d9d9;
+          background: #fff;
+          height: 48px;
+          line-height: 48px;
+          margin: 0px 16px 16px 16px;
+          color: #454545;
+          font-family: Pretendard;
+          font-size: 15px;
+          font-weight: 500;
+          .btn-content-wrp {
+            width: max-content;
+            margin: 0 auto;
+            display: flex;
+            .copy {
+              margin-top: 3px;
+              img {
+                width: 20px;
+                margin-right: 8px;
+              }
+            }
+          }
+        }
       }
     }
   }
